2003-05-22  olicha  <olivier.chapuis@free.fr>

	* fvwm/colorset.c (parse_colorset):
	Fixed an uninit mem

	* fvwm/borders.c (border_fill_pixmap_background): 
	Fixed problem with depth 1 pixmap

	* fvwm/conditional.c (CMD_On):
	Fixed memory leaks

	* fvwm/conditional.c (CreateConditionMask):
	Fixed memory leaks for layer and state

2003-05-22  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	added perllib/FVWM/Tracker/Makefile

2003-05-22  olicha  <olivier.chapuis@free.fr>

	* fvwm/fvwm.1.in:
	* fvwm/style.h:
	* fvwm/style.c (print_styles):
	* fvwm/builtins.c (CMD_PrintInfo):
	New style subject to PrintInfo

2003-05-20  olicha  <olivier.chapuis@free.fr>

	* libs/Flocale.c (FlocaleGetFontOrFontSet):
	Allowed empty xft font name

	* libs/Makefile.am:
	* libs/flist.c (new file):
	* libs/flist.h (new file):
	Added a flist structure and some basic function for handling such
	stucture

	* libs/FGettext.c (*):
	Use the new flist struct and functions interface

	* fvwm/screen.h (ScreenInfo):
	* fvwm/update.c (destroy_scheduled_windows):
	* fvwm/add_window.c (destroy_window):
	Added a list for the windows which are scheduled for destroy
	Remove a fw at once from the fw list when we destroy_window

2003-05-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/style.c (CMD_DestroyStyle):
	do not update windows if no style was deleted
	(check_window_style_change):
	fixed update of window styles w/ DestroyStyle

2003-05-18  olicha  <olivier.chapuis@free.fr>

	* fvwm/conditional.c (CMD_On):
	Added x,r,w,f and i file condition to the On command

	* fvwm/add_window.c (destroy_window):
	Fixed a memory leak (a FvwmWindow !) when a window is not destroyed
	but scheduled for destroy. Not sure that the fix is good.

	* fvwm/functions.c (__execute_function):
	* libs/defaults.h:
	Limited the depth of function to MAX_FUNCTION_DEPTH (=512).
	This fixes some cores dumps with "recursives" functions

	* fvwm/borders.c (border_create_root_transparent_pixmap):
	(border_draw_decor_to_pixmap):